# ROS

devel/: .rosinstall
src/: catkIn_setup.sh
src/ICET/msg/: Num.msg
src/funtimes/: CMakeLists.txt  package.xml
src/velodyne_plugin/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  bag2mapframe.py  bag2ouster.py  cloudmaker.py  cmake_install.cmake  constrained_lidar.world  gazebo_pub_node.py  gazebo_to_ros.py  laser_scan_node.cpp  listener.cc  naive_distortion_corrector.py  notes.txt  package.xml  remove_motion_distortion_tests.ipynb  save_LOAM_output.py  sensor_mover.py  sensor_placer.py  test1.world  test2.world  test3.world  testbox.world  testbox2  velodyne.world  velodyne_32.world  velodyne_plugin.cc
src/velodyne_plugin/atomic_configure/: .rosinstall  local_setup.sh
src/velodyne_plugin/catkin_generated/: generate_cached_setup.py  order_packages.py  setup_cached.sh
src/velodyne_plugin/catkin_generated/stamps/Project/: _setup_util.py.stamp
src/velodyne_plugin/devel/: .catkin  setup.sh
src/velodyne_plugin/devel/lib/pkgconfig/: ICET.pc  funtimes.pc
src/velodyne_plugin/devel/share/ICET/cmake/: ICET-msg-paths.cmake  ICETConfig.cmake
src/velodyne_plugin/devel/share/common-lisp/ros/ICET/msg/: _package.lisp
src/velodyne_plugin/devel/share/funtimes/cmake/: funtimesConfig.cmake
src/velodyne_plugin/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/velodyne_plugin/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/velodyne_plugin/gtest/googletest/: CTestTestfile.cmake  Makefile
(+127 files in other folders)
