<?xml version="1.0"?>
<package format="2">
  <name>laser_scan_node</name>
  <version>0.0.0</version>
  <description>The laser_scan_node package</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>
